Db settings moved to .env; Introduced user search method
