# src/application.rs
@@ -1,4 +1,3 @@
-use chrono::NaiveDate;
 use openapi::apis::default::{Default, LoginPostResponse, UserGetIdGetResponse, UserRegisterPostResponse, UserSearchGetResponse};
 use openapi::apis::{ApiAuthBasic, BasicAuthKind, ErrorHandler};
 use axum_extra::extract::{CookieJar, Host};
@@ -13,7 +12,6 @@ use crate::auth;
 use axum::response::IntoResponse;
 use axum::{http::{StatusCode}};
 use log::{info};
-use jsonwebtoken::{decode, DecodingKey, Validation};
 
 #[derive(Clone)]
 pub struct Application {
@@ -29,31 +27,23 @@ impl AsRef<Application> for Application {
 #[async_trait::async_trait]
 impl ApiAuthBasic for Application {
     type Claims = auth::Claims;
-    async fn extract_claims_from_auth_header(&self, kind: BasicAuthKind, headers: &axum::http::header::HeaderMap, key: &str) -> Option<Self::Claims> {
-        // 1. Получаем заголовок Authorization
-        let auth_header = headers.get("Authorization")
+    async fn extract_claims_from_auth_header(&self, _kind: BasicAuthKind, headers: &axum::http::header::HeaderMap, _key: &str) -> Option<Self::Claims> {                                
+        let token = headers.get("Authorization")
             .and_then(|value| value.to_str().ok())
-            .ok_or_else(|| {
-                (StatusCode::UNAUTHORIZED, "Missing or invalid Authorization header").into_response()
-            }).unwrap();
-
-        // 2. Проверяем, что заголовок начинается с "Bearer "
-        let token = auth_header.strip_prefix("Bearer ")
+            .ok_or_else(|| {(StatusCode::UNAUTHORIZED, "Missing or invalid Authorization header").into_response()}).ok()
+            .and_then(|value| value.strip_prefix("Bearer "))                
             .ok_or_else(|| {
                 (StatusCode::UNAUTHORIZED, "Invalid authorization scheme, expected Bearer").into_response()
-            }).unwrap();
-        info!("{:?}", token);
-        // 3. Считываем секретный ключ (лучше передавать через Axum State, но пока так)
-        let secret = std::env::var("JWT_SECRET").unwrap();
-        let decoding_key = DecodingKey::from_secret(secret.as_bytes());
-
-        // 4. Декодируем и валидируем токен
-        let validation = Validation::default();
-        let claims_data = decode::<auth::Claims>(token, &decoding_key, &validation)
-            .map_err(|_| {
-                (StatusCode::UNAUTHORIZED, "Invalid or expired token").into_response()
-            }).unwrap();
-        Some(claims_data.claims)
+            })
+            .unwrap();
+        info!("{:?}", token);        
+        Some(
+            auth::verify_token(token, &self.state.secret.as_bytes())
+                .map_err(|_| {
+                    (StatusCode::UNAUTHORIZED, "Invalid or expired token").into_response()
+                })
+                .unwrap()
+        )
     }
 }
 
@@ -77,11 +67,10 @@ impl Default for Application {
         _: &CookieJar,
         login: &Option<models::LoginPostRequest>
     ) -> Result<LoginPostResponse, ()> {
-        let login = login.clone().expect("No login passed");
-        let client = self.state.pool.get().await.unwrap();
+        let login = login.clone().expect("No login passed");        
         let uuid = Uuid::parse_str(&login.id.expect("Login must contain user id")).unwrap();
         match user_service::authenticate_user(
-            client,
+            self.state.pool.get().await.unwrap(),
             &uuid,
             login.password.expect("Login must contain user password"),
         ).await {
@@ -110,23 +99,12 @@ impl Default for Application {
         _: &Self::Claims,
         path_params: &models::UserGetIdGetPathParams
     ) -> Result<UserGetIdGetResponse, ()> {
-        let id = Uuid::parse_str(&path_params.id).unwrap();
-        let client = self.state.pool.get().await.unwrap();
-        let stmt = client.prepare_cached("SELECT first_name, second_name, birthdate, biography, city FROM users WHERE id=$1").await.unwrap();
-        let row = client.query_one(&stmt, &[&id]).await.unwrap();
-        let first_name: String = row.get(0);            
-        let second_name: String = row.get(1);            
-        let birthdate: Option<NaiveDate> = row.get(2);            
-        let biography: Option<String> = row.get(3);            
-        let city: Option<String> = row.get(4);            
-        Ok(UserGetIdGetResponse::Status200(
-            User{id: Some(id.to_string()),
-                 first_name: Some(first_name),
-                 second_name: Some(second_name),
-                 birthdate,
-                 biography,
-                 city}
-            )
+        let user = user_service::get_user_by_id(
+            self.state.pool.get().await.unwrap(), 
+            Uuid::parse_str(&path_params.id).unwrap()
+        ).await.unwrap();        
+        Ok(
+            UserGetIdGetResponse::Status200(to_user_dto(user))
         )
     }
 
@@ -139,10 +117,9 @@ impl Default for Application {
     ) -> Result<UserRegisterPostResponse, ()> {                
         Ok(
             match user_registration_request {                
-                Some(req) => {
-                    let client = self.state.pool.get().await.unwrap();
+                Some(req) => {                    
                     let res = user_service::register_user(
-                        client,
+                        self.state.pool.get().await.unwrap(),
                         user_service::UserRegistration {
                             first_name: &req.first_name,
                             second_name: &req.second_name,
@@ -172,12 +149,33 @@ impl Default for Application {
         _host: &Host,
         _: &CookieJar,
         _: &Self::Claims,
-        _: &models::UserSearchGetQueryParams,        
+        search_request: &models::UserSearchGetQueryParams,        
         ) -> Result<UserSearchGetResponse, ()> {
         Ok(
             UserSearchGetResponse::Status200(
-                vec!()
+                to_user_dtos(
+                    user_service::search_by_first_and_last_name(
+                        self.state.pool.get().await.unwrap(), 
+                        &search_request.first_name, 
+                        &search_request.last_name
+                    ).await
+                )
             )
         )
     }
+}
+
+fn to_user_dtos(users: Vec<user_service::User>) -> Vec<User> {
+    users.into_iter().map(to_user_dto).collect()
+}
+
+fn to_user_dto(user: user_service::User) -> User {
+    User {
+        id: user.id,
+        first_name: user.first_name,
+        second_name: user.second_name,
+        birthdate: user.birthdate,
+        biography: user.biography,
+        city: user.city,
+    }    
 }
